--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine On
 
-RewriteRule ^inscrivez-vous/$ form/registration.php
+RewriteRule ^inscription/$ form/registration.php
+RewriteRule ^connexion/$ form/login.php
+RewriteRule ^modifier-mon-profil/$ profile/editProfile.php
